--- a/sass/components/_media-grid.scss
+++ b/sass/components/_media-grid.scss
@@ -6,16 +6,16 @@
 
   article {
     width: 100%;
-    padding: 1% 0;
+    padding: .5em 0;
 
     @media (min-width: 550px) and (max-width: 960px) {
       width: 45%;
-      padding: 1%;
+      padding: .5em;
     }
 
     @media (min-width: 960px) {
       width: 30%;
-      padding: 1%;
+      padding: .5em;
     }
   }
 
